syntax = "proto3";

package proto;

service Pump {
    rpc WriteBinlog (WriteBinlogReq) returns (WriteBinlogResp) {}
    rpc PullBinlog (PullBinlogReq) returns (PullBinlogResp) {}
}

message WriteBinlogReq {
    uint64 clusterID = 1;
    bytes payload = 2;
}

message WriteBinlogResp {
    string errmsg = 1;
}

message PullBinlogReq {
    uint64 clusterID = 1;
    Pos startFrom  = 2;
    int32 batch = 3;
}

message PullBinlogResp {
    string errmsg = 1;
    repeated Item items = 2;
}

message Pos {
    uint32 suffix = 1;
    uint64 offset = 2;
}

message Item {
    Pos offset = 1;
    bytes payload = 2;
}